# goodtime

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
.yamlschemas/: github-workflow.schema.yaml  readthedocs.schema.yaml
docs/: api.rst  conf.py  index.rst
goodtime/: __init__.py  _civil_time.py  _duration.py  _instant.py  _timezone.py
tests/: test_duration.py  test_instant.py  test_timezone.py
